@@ -12,6 +12,9 @@
   editable dependencies before); this allows running pip wheel on the result
   of pip freeze in presence of editable requirements (:issue:`3291`)
 
+* Return a failing exit status when `pip install`, `pip download`, or
+  `pip wheel` is called with no requirements. (:issue:`2720`, :pull:`2721`)
+
 
 **8.1.2 (2016-05-10)**
 
